# Advent-of-Code-2025

./: NOTES.md  README.md
day_1/: README.md
day_1/src/: main.rs
day_2/: README.md
day_2/src/: main.rs
day_3/: README.md
day_3/src/: main.rs
day_4/: README.md
day_4/src/: main.rs
day_5/: Cargo.toml  README.md
day_5/src/: main.rs
day_6/: README.md
day_6/inputs/: sample_part1.txt
day_6/src/: main.rs
day_template/: Cargo.toml  README.md
day_template/src/: main.rs
